Fixed: alignment issue , New: added svg img on early access open

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
   font-family: "Inter", sans-serif;
+  padding: 0%;
+  margin: 0%;
 }
 
 .navbar {
@@ -86,6 +88,9 @@ ul {
   font-size: 16px;
   max-width: 700px;
   margin: 0 auto;
+  /* display: flex;
+  justify-content: flex-start;
+  align-items: center; */
 }
 
 .head-buttons {
@@ -102,11 +107,17 @@ ul {
 }
 
 .early-open {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width: 229px; */
+  width: fit-content;
+  gap: 6px;
   background-color: white;
   border: 1px solid rgba(255, 255, 255, 0.2);
-  padding: 6px 16px;
+  padding: 8px 12px;
   border-radius: 100px;
+  margin: 0 auto;
   margin-bottom: 14px;
   color: #15ff00;
 }
@@ -227,7 +238,7 @@ h3 {
   gap: 80px;
 }
 
-.sb-image{
+.sb-image {
   height: 600px;
   width: 600px;
 }
